--- a/src/index.css
+++ b/src/index.css
@@ -77,11 +77,7 @@ canvas, .app-container{
 }
 .app-container{
   overflow-x: hidden;
-  overflow-y: auto; 
-
-}
-
-
+  overflow-y: auto; }
 button {
   pointer-events: auto;
 }
