--- a/src/intro.css
+++ b/src/intro.css
@@ -1,9 +1,6 @@
-/* Intro Canvas */
 #intro canvas {
   pointer-events: none;
 }
-
-/* Main Header */
 .main-head {
   position: relative;
   z-index: 1;
@@ -12,6 +9,8 @@
   margin-top: 48px;
   text-align: left;
   background-color: transparent;
+  margin-bottom: 75px;
+  height: 48vh;
 }
 
 .main-head h2 {
@@ -99,7 +98,6 @@
   pointer-events: none;
 }
 
-/* Responsive Design */
 @media (max-width: 768px) {
   #intro {
       position: relative;
@@ -112,11 +110,12 @@
       pointer-events: none;
   }
 
-  .button-grp button {
-      padding: 10px;
-      background-color: black;
+  .button-grp button{
+    padding: 5px 10px;
+    border-radius: 4px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
-
   .fluid-canvas {
       width: 100%;
       height: 80vh;
@@ -205,4 +204,30 @@
     width: 100%;
     padding:0;
   }
+}
+
+.mobile-intro {
+  height: 85vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.swipe-zone {
+  position: absolute;
+  bottom: 0;
+  height: 40vh;
+  width: 100%;
+  background: transparent;
+  z-index: 5;
+}
+
+.scroll-hint {
+  position: absolute;
+  bottom: 24px; 
+  width: 100%;
+  text-align: center;
+  font-size: 16px;
+  color: #ffffffcc;
+  animation: fadeHint 2s infinite alternate;
+  z-index: 10;
 }
