--- a/src/experience.css
+++ b/src/experience.css
@@ -1,15 +1,14 @@
 .experience-container {
-    width: 50%;
-    margin: 0 auto;
-    padding: 20px;
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
+  width: 50%;
+  margin: 0 auto;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 24px;
   }
-  .experience-item{
-
+.experience-item{
     padding:10px;
     margin-bottom: 20px;
     border-radius: 10px;
@@ -17,31 +16,31 @@
   }
 
 .experience-item:hover {
-    transform: scale(1.02);
-  }
+  transform: scale(1.02);
+}
   
 .experience-summary {
-    padding: 15px;
-    background-color: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-  }
+  padding: 15px;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
   
 .job-com {
-    font-size: 18px;
-    font-weight: bold;
-    color: #555;
-  }
+  font-size: 18px;
+  font-weight: bold;
+  color: #555;
+}
   
 .job-date {
-    font-size: 14px;
-    color: #535353;
-    margin:0;
-    text-align: right;
-    padding:0;
-  }
+  font-size: 14px;
+  color: #535353;
+  margin:0;
+  text-align: right;
+  padding:0;
+}
   
 .experience-details {
     overflow: hidden;
@@ -50,39 +49,33 @@
   }
   
 .job-description {
-    margin: 0 auto;
-    padding-top: 24px;
-    font-size: 16px;
-    color: #444;
-    font-weight: 900;
-    max-width: 600px;
-  }
+  margin: 0 auto;
+  padding-top: 24px;
+  font-size: 16px;
+  color: #444;
+  font-weight: 900;
+  max-width: 600px;
+}
   
-  .job-duties,
-  .job-badges {
-    padding: 0;
-    margin: 0 auto;
-    max-width: 525px;
-    text-align: left;
-  }
+.job-duties,
+.job-badges {
+  padding: 0;
+  margin: 0 auto;
+  max-width: 525px;
+  text-align: left;
+}
   
-  .job-duties li,
-  .job-badges li {
-    font-size: 14px;
-    line-height: 1.3;
-    margin: 5px 0;
-    color: #666;
-  }
-  
-  .badge {
-    display: inline-block;
-    padding: 5px 10px;
-    background-color: #e0e0e0;
-    border-radius: 15px;
-    font-size: 12px;
-    color: #333;
-  }
+.job-duties li,
+.job-badges li {
+  font-size: 14px;
+  line-height: 1.3;
+  margin: 5px 0;
+  color: #666;
+}
 
+.experience-item{
+    padding: 20px;
+}
 
 .experience-title{
     text-align: center;
@@ -90,6 +83,7 @@
     color: #ddd;
     margin-bottom: 20px;
 }
+
 .experience-right h3{
   margin: 0 auto;
   font-size: 20px;
@@ -105,11 +99,14 @@
 
 @media (max-width: 768px) {
   .experience-container {
-    width: 80%;
+    width: 90%;
     text-align: left;
     padding: 10px;
   }
 
+  .job-date {
+    text-align:left;
+  }
   .experience-summary {
     flex-direction: column;
     align-items: flex-start;
@@ -137,4 +134,14 @@
     margin-bottom: 14px;
     border-bottom: 1px solid #212121;
   }
+}
+
+  
+.badge {
+  display: inline-block;
+  padding: 5px 10px;
+  background-color: #e6c4ff;
+  border-radius: 15px;
+  font-size: 12px;
+  color: #333;
 }
